--December 5, 2009--
- Rewritten the TimeLine widget in order to allow the user to place it both
  in vertical and horizontal position.

--November 30,2009--
- Selecting the editor tab now loads the previous active editor (if exists)
  instead of showing the 'select a file' QWidget.

--November 29,2009--
- The state of central widgets (editor, publisher, documentation etc)
  are no longer reloaded, but are remembered and restored as the user
  switches between them.

--November 28,2009--
- Added simple documentation widget.

--November 23,2009--
- Reverted 'Recent project list' to showing plasmoid names and fixed
  so it works. Import plasmoids now works.

--November 21,2009--
- Added preliminary support for importing plasmoids.
  'Recent project list' now shows project folder names instead of 
  plasmoid names to avoid confusion.

--November 15,2009--
- Added a simple, draft publisher widget. Exporting and installing plasmoids
  work, but online publishing doesn't for now.

--November 14,2009--
- New files can now be added to the project by clicking 'New' in the editor
  tree, and existing files can be deleted by doing a right-click > Delete.

--November 13,2009--
- Editor tree now dynamically reflects changes in the directory

--October 27,2009--
- Restored previewer dockwidget (while retaining previewer tab for now).
  Previewer refresh button now asks the mainwindow to save any unsaved
  data so that the preview is up to date. Also added a 'Refresh Previewer'
  menubar item with a keyboard shortcut (Ctrl-F5 for now) that does the same.

--October 26,2009--
- Editor contents are now automagically saved on swapping files/tabs and
  on exit.

--October 19,2009--
- Metadata editor now loads properly (but still unable to save). Previewer is
  now in a tab of its own.

--October 18,2009--
- Selecting metadata now brings up the metadata editor GUI - but it doesn't
  really work.

--October 1,2009--